--- a/application/customOrder/view/index/index.html
+++ b/application/customOrder/view/index/index.html
@@ -40,9 +40,33 @@ margin:8px;
   border-top: 1px solid #eee;
 }
 </style>
+<!-- <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script> -->
+<script src="../../public/static/js/jquery-3.3.1.js"></script>
+<script src="../../public/static/layer/layer.js"></script>
+<script >
+    function tiaozhuan(id){
+
+
+    }
+$(document).ready(function(){
+$('.submit').on('click', function(){
+    var id =$(this).attr("id");
+    alert (id);
+    layer.open({
+      type: 2,
+      title: '修改订单',
+      maxmin: true,
+      shadeClose: true, //点击遮罩关闭层
+      area : ['800px' , '520px'],
+      content: '../../public/customOrder/Update_order/update?id='+id
+    });
+  });
+});
+</script>
 </head>
 <body>
 <h2>订单列表</h2> 
+<input type="button" id="p" class="shiyixia" value="222">
 <table class="table table-striped table-hover">
     <thead>
         <tr>
@@ -50,26 +74,29 @@ margin:8px;
             <th id="stu_rollno">订单编号</th>
             <th id="stu_name">顾客编号</th>
             <th id="major_name">创建时间</th>
-            <th id="course_name">渠道</i></th>
+            <th id="course_name">渠道</th>
             <th id="tea_name">数量</th>
-            <th id="mark">单间</th>
+            <th id="mark">单价</th>
+            <th id="mark">总额</th>
             <th id="mark">销售员编号</th>
             <th id="type">活动类型</th>
+            <th id="type">操作</th>
         </tr>
     </thead>
 
     {volist name="cusTomOrder" id="order" }
     <tr>
-        <td><?php echo ( $_GET['page']?($_GET['page']*10-10+$i):$i  );?></td>
+        <td><?php echo ( $_GET['page']?($_GET['page']*10-10+$i):$i  ); ?></td>
         <td>{$order.order_num}</td>
         <td>{$order.custom_num}</td>
         <td>{$order.order_time}</td>
         <td>{$order.order_channel}</td>
         <td>{$order.amount}</td>
         <td>{$order.unit_price}</td>
+        <td><?php echo $order['unit_price']*$order['amount']; ?></td>
         <td>{$order.saler_num}</td>
         <td>{$order.activity}</td>
-        <input type="hidden" value="{$order.activity.id}">
+        <td><button class="submit" id={$order.order_num} onclick="onclick(this)">修改</button></td>
     </tr>
     {/volist}
 </table>
