--- a/application/customOrder/view/index/index.html
+++ b/application/customOrder/view/index/index.html
@@ -51,7 +51,6 @@ margin:8px;
 $(document).ready(function(){
 $('.submit').on('click', function(){
     var id =$(this).attr("id");
-    alert (id);
     layer.open({
       type: 2,
       title: '修改订单',
@@ -61,12 +60,37 @@ $('.submit').on('click', function(){
       content: '../../public/customOrder/Update_order/update?id='+id
     });
   });
+
+//   $('#excel').submit( function(){
+//     $.post('../../public/customOrder/import_from_excel/import', {}, function(str){
+//      layer.open({
+//         type: 1,
+//         content: str //注意，如果str是object，那么需要字符拼接。
+//   });
+// });
+//   });
+
+   $("#excel").bind("submit", function(){    
+    var file=$("#file").val();  
+    if(file == ""){    
+        alert("请选择文件！！！");  
+        return false;    
+    }    
+});  
+
+
 });
 </script>
 </head>
 <body>
 <h2>订单列表</h2> 
-<input type="button" id="p" class="shiyixia" value="222">
+
+<div>
+    <form id="excel" method="post" action="{:url('customOrder/import_from_excel/import')}"  class="form-signin" enctype="multipart/form-data" >
+    <input id="file" name="excel" type="file" class="form-control">
+    <button class="btn btn-lg btn-primary btn-block">导入</button>
+    </form>
+</div>
 <table class="table table-striped table-hover">
     <thead>
         <tr>
@@ -96,7 +120,7 @@ $('.submit').on('click', function(){
         <td><?php echo $order['unit_price']*$order['amount']; ?></td>
         <td>{$order.saler_num}</td>
         <td>{$order.activity}</td>
-        <td><button class="submit" id={$order.order_num} onclick="onclick(this)">修改</button></td>
+        <td><button class="submit" id={$order.order_num}">修改</button></td>
     </tr>
     {/volist}
 </table>
