--- a/application/customOrder/view/index/index.html
+++ b/application/customOrder/view/index/index.html
@@ -114,7 +114,11 @@ margin:8px;
 <h2>订单列表</h2> 
 <div id="txt"><h2>通过 AJAX 改变文本</h2></div>
 <button id="test">改变内容</button>
-<a href="../../顾客订单导入模板.xlsx"><button value="下载模板">下载</button></a>
+<a href="../../顾客订单导入模板.xlsx"><button
+    
+    
+    
+    value="下载模板">下载</button></a>
 <div>
         <!-- action="{:url('customOrder/import_from_excel/import')}" -->
     <form id="excel" method="post" action="{:url('customOrder/import_from_excel/import')}"   class="form-signin" enctype="multipart/form-data" >
