--- a/application/customOrder/view/update_order/form.html
+++ b/application/customOrder/view/update_order/form.html
@@ -42,29 +42,29 @@
     <div class="layui-form-item">
       <label class="layui-form-label">订单编号</label>
       <div class="layui-input-block">
-        <input type="text" name="title" disabled lay-verify="required" value="{$info.order_num}" autocomplete="off"
+        <input type="text" name="order_num" disabled lay-verify="required" value="{$info.order_num}" autocomplete="off"
           class="layui-input">
       </div>
     </div>
-
+    <input type="hidden" name="order_num" value="{$info.order_num}" >
     <div class="layui-form-item">
       <label class="layui-form-label">顾客信息</label>
       <div class="layui-input-block">
-        <input type="text" name="" disabled value="{$info.custom_num}" class="layui-input">
+        <input type="text" name="custom_num" disabled value="{$info.custom_num}" class="layui-input">
       </div>
 
     </div>
     <div class="layui-form-item">
       <label class="layui-form-label">订单时间</label>
       <div class="layui-input-block">
-        <input type="text" name="" disabled value="{$info.order_time}" class="layui-input">
+        <input type="text" name="time" disabled value="{$info.order_time}" class="layui-input">
       </div>
     </div>
 
     <div class="layui-form-item">
       <label class="layui-form-label">选择渠道</label>
       <div class="layui-input-block">
-        <select name="city" lay-verify="required">
+        <select name="channel" lay-verify="required">
           <option value="{$info.order_channel}">{$info.order_channel}</option>
           <option value="官方商城">官方商城</option>
           <option value="电商自营店">电商自营店</option>
@@ -78,11 +78,11 @@
         <label class="layui-form-label">数量</label>
         <div class="layui-inline">
           <div class="layui-input-inline">
-          <input type="number" name="" value="{$info.amount}" class="layui-input">
+          <input type="number" name="amount" value="{$info.amount}" class="layui-input">
           </div>
           <label class="layui-form-label">单价</label>
           <div class="layui-input-inline">
-              <input type="text" name="" value="{$info.unit_price}" class="layui-input">
+              <input type="text" name="unPrice" value="{$info.unit_price}" class="layui-input">
               </div>
         </div> 
   </div>
@@ -90,15 +90,10 @@
         <div class="layui-form-item">
           <label class="layui-form-label">销售人员</label>
           <div class="layui-input-block">
-            <input type="text" name="" disabled value="{$info.saler_num}" class="layui-input">
+            <input type="text" name="saler" value="{$info.saler_num}" class="layui-input"  disabled>
           </div>
         </div>
-        <div class="layui-form-item layui-form-text">
-          <label class="layui-form-label">备注信息</label>
-          <div class="layui-input-block">
-            <textarea name="desc" placeholder="请输入内容" class="layui-textarea"></textarea>
-          </div>
-        </div>
+        
 
                         
         <div class="layui-form-item">
