登录传参修改

--- a/application/login/view/index/login.html
+++ b/application/login/view/index/login.html
@@ -25,7 +25,7 @@ session_start(); //启用会话变量
   }
   body
   {
-  background:url('__ROOT__/static/images/login.png') no-repeat;
+  background:url('https://static.pingendo.com/cover-bubble-dark.svg') no-repeat;
   background-size: 100%;
   }
   #forms
