--- a/application/afterSale/view/AfterSale/show.html
+++ b/application/afterSale/view/AfterSale/show.html
@@ -10,7 +10,7 @@
 </head>
 
 <script>
-    function createForm(){
+    function createForm() {
         var selectType = document.getElementById("type");
         var index = selectType.selectedIndex
         var valuetype = myselect.options[index].value;
@@ -23,8 +23,8 @@
 
         var date = document.getElementById('date').value;
 
-        window.location.href="../../public/afterSale/AfterSale/createForm?type="+valuetype+"&content="+content
-        +"&saleID="+saleID+"&saleperson="+saleperson+"&date="+date;
+        window.location.href = "../../public/afterSale/AfterSale/createForm?type=" + valuetype + "&content=" + content
+            + "&saleID=" + saleID + "&saleperson=" + saleperson + "&date=" + date;
     }
 </script>
 
@@ -32,93 +32,88 @@
 
     <div style="padding: 100px 100px 10px;">
 
-        <form class="bs-example bs-example-form" role="form" method="GET" action="../AfterSale/insert/aftersaleID/asdf">
+        <label for="name">问题分类</label>
+        <select class="form-control" name="type">
+            <option>退货</option>
+            <option>换货</option>
+            <option>维修</option>
+            <option>咨询</option>
+        </select>
+        <div class="form-group">
+            <label for="name">问题详情</label>
+            <textarea class="form-control" rows="3" name="content" id="content"></textarea>
+        </div>
+        <div class="form-group">
+            <label for="name">订单编号</label>
+            <input type="text" class="form-control" id="name" placeholder="请输入销售单号" name="saleID" id="saleID">
+        </div>
+
+        <div class="form-group">
+            <label for="name">售后人员</label>
+            <input type="text" class="form-control" id="name" placeholder="请输入销售人选编号" name="saleperson" id="saleperson">
+        </div>
+        <div class="form-group">
+            <label for="name">日期</label>
+            <input type="date" class="form-control" id="name" placeholder="请选择受理日期" name="date" id="date">
+        </div>
 
 
-
-            <label for="name">问题分类</label>
-            <select class="form-control" name="type">
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-                <option>5</option>
-            </select>
-            <div class="form-group">
-                <label for="name">问题详情</label>
-                <textarea class="form-control" rows="3" name="content" id="content"></textarea>
-            </div>
-            <div class="form-group">
-                <label for="name">订单编号</label>
-                <input type="text" class="form-control" id="name" placeholder="请输入名称" name="saleID" id="saleID">
-            </div>
-
-            <div class="form-group">
-                <label for="name">售后人员</label>
-                <input type="text" class="form-control" id="name" placeholder="请输入名称" name="saleperson" id="saleperson">
-            </div>
-            <div class="form-group">
-                <label for="name">日期</label>
-                <input type="date" class="form-control" id="name" placeholder="请输入名称" name="date" id="date">
-            </div>
+        <button class="btn btn-primary btn-lg" type="button" data-toggle="modal" data-target="#myModal" onclick="createForm()">
+            提交
+        </button>
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                            &times;
+                        </button>
+                        <h4 class="modal-title" id="myModalLabel">
+                            售后表单
+                        </h4>
+                    </div>
+                    <form class="bs-example bs-example-form" role="form" method="GET" action="../AfterSale/insert"></form>
+                    <div class="modal-body">
 
 
-            <button class="btn btn-primary btn-lg" type="button" data-toggle="modal" data-target="#myModal" onclick="createForm()">
-                提交
-            </button>
-            <!-- 模态框（Modal） -->
-            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-                                &times;
-                            </button>
-                            <h4 class="modal-title" id="myModalLabel">
-                                售后表单
-                            </h4>
+                        <label for="name">售后单号</label>
+                        <input type="text" class="form-control" disabled name="aftersaleID" value="{$aftersaleID}">
+                        <label for="name">问题分类</label>
+                        <input type="text" class="form-control" disabled name="type" value="{$type}">
+                        <div class="form-group">
+                            <label for="name">问题详情</label>
+                            <textarea class="form-control" disabled rows="3" name="content" value="{$content}"></textarea>
                         </div>
-                        <div class="modal-body">
-                            <form class="bs-example bs-example-form" role="form" method="GET" action="../AfterSale/insert/aftersaleID/asdf">
+                        <div class="form-group">
+                            <label for="name">订单编号</label>
+                            <input type="text" class="form-control" disabled name="saleID" value="{$saleID}">
+                        </div>
 
-                                <label for="name">问题分类</label>
-                                <select class="form-control" name="type" id="type">
-                                    <option>1</option>
-                                    <option>2</option>
-                                    <option>3</option>
-                                    <option>4</option>
-                                    <option>5</option>
-                                </select>
-                                <div class="form-group">
-                                    <label for="name">问题详情</label>
-                                    <textarea class="form-control" rows="3" name="content"></textarea>
-                                </div>
-                                <div class="form-group">
-                                    <label for="name">订单编号</label>
-                                    <input type="text" class="form-control" id="name" placeholder="请输入名称" name="saleID">
-                                </div>
-                    
-                                <div class="form-group">
-                                    <label for="name">售后人员</label>
-                                    <input type="text" class="form-control" id="name" placeholder="请输入名称" name="saleperson">
-                                </div>
-                                <div class="form-group">
-                                    <label for="name">日期</label>
-                                    <input type="date" class="form-control" id="name" placeholder="请输入名称" name="date">
-                                </div>
-                            </form>
+                        <div class="form-group">
+                            <label for="name">售后人员</label>
+                            <input type="text" class="form-control" disabled name="saleperson" value="{$saleperson}">
                         </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">关闭
-                            </button>
-                            <button type="submit" class="btn btn-primary">
-                                提交更改
-                            </button>
+                        <div class="form-group">
+                            <label for="name">日期</label>
+                            <input type="date" class="form-control" disabled name="date" value="{$date}">
                         </div>
-                    </div><!-- /.modal-content -->
-                </div><!-- /.modal -->
-            </div>
-        </form>
+
+                    </div>
+
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">关闭
+                        </button>
+                        <button type="submit" class="btn btn-primary">
+                            提交更改
+                        </button>
+                    </div>
+                    </form>
+                </div><!-- /.modal-content -->
+
+            </div><!-- /.modal -->
+        </div>
+
+
     </div>
 
 </body>
