修改员工表，添加公司联系人表，订单添加逻辑

--- a/application/customOrder/view/index/index.html
+++ b/application/customOrder/view/index/index.html
@@ -151,8 +151,8 @@ margin:8px;
         <td>{$order.order_time}</td>
         <td>{$order.order_channel}</td>
         <td>{$order.amount}</td>
-        <td>{$order.unit_price}</td>
-        <td><?php echo $order['unit_price']*$order['amount']; ?></td>
+        <td>{$order.product_price}</td>
+        <td><?php echo $order['product_price']*$order['amount']; ?></td>
         <td>{$order.saler_num}</td>
         <td>{$order.activity}</td>
         <td><button class="submit" id={$order.order_num}">修改</button></td>
