--- a/application/customOrder/view/index/index.html
+++ b/application/customOrder/view/index/index.html
@@ -112,18 +112,18 @@ margin:8px;
 </head>
 <body>
 <h2>订单列表</h2> 
-<div id="txt"><h2>通过 AJAX 改变文本</h2></div>
-<button id="test">改变内容</button>
+
+<a href='../../public/customOrder/index/excelPrint'><button id="test">导出Excel</button></a>
 <a href="../../顾客订单导入模板.xlsx"><button
     
     
     
-    value="下载模板">下载</button></a>
+    value="下载模板">下载导入模板</button></a>
 <div>
         <!-- action="{:url('customOrder/import_from_excel/import')}" -->
     <form id="excel" method="post" action="{:url('customOrder/import_from_excel/import')}"   class="form-signin" enctype="multipart/form-data" >
     <input id="file" name="excel" type="file" class="form-control">
-    <button class="btn btn-lg btn-primary btn-block"id="btton" >导入</button>
+    <button class="btn btn-lg btn-primary btn-block"id="btton" >导入订单</button>
     </form>
 </div>
 <table class="table table-striped table-hover">
