--- a/application/customOrder/view/index/index.html
+++ b/application/customOrder/view/index/index.html
@@ -114,6 +114,8 @@ margin:8px;
 <h2>订单列表</h2> 
 
 <a href='../../public/customOrder/index/excelPrint'><button id="test">导出Excel</button></a>
+<a href='../../public/customOrder/index/getPdf'><button id="test">导出PDF</button></a>
+
 <a href="../../顾客订单导入模板.xlsx"><button
     
     
