数据库备份

--- a/application/customOrder/view/update_order/form.html
+++ b/application/customOrder/view/update_order/form.html
@@ -63,7 +63,7 @@
       <div class="layui-input-block">
         <p>名称：{$info.product_name}</p>
         <p>尺寸：{$info.product_size}</p>
-        <p>颜色：{$info.procuct_color} </p>
+        <p>颜色：{$info.product_color} </p>
         <p>规格：{$info.product_model}</p>
         <p>重量：{$info.product_weight}</p>
       </div>
