--- a/application/login/view/index/login.html
+++ b/application/login/view/index/login.html
@@ -1,79 +1,8 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <?php 
 session_start(); //启用会话变量    
 ?>
-<style>
-  @font-face 
-  {
-    font-family: "Login";
-    src: url('__ROOT__/static/font/Login.ttf');
-  }
-  @font-face 
-  {
-    font-family: "btn";
-    src: url('__ROOT__/static/font/Home School.otf');
-  }
-  html,body
-  {
-    width:100%;
-    height:100%;
-  }
-  body
-  {
-  background:url('https://static.pingendo.com/cover-bubble-dark.svg') no-repeat;
-  background-size: 100%;
-  }
-  #forms
-  {
-    position: absolute;
-    margin-left: -7%;
-    margin-top: 10%;
-
-  }
-  #forms1
-  {
-    background-color:rgba(144,144,144,0.5);
-  }
-  #fonts
-  {
-    font-family:"Login";
-    font-size: 55px;
-    text-shadow: 10px 10px 50px #000;
-  }
-  #btn
-  {
-    font-family: "btn";
-    font-size: 25px;
-    background-color: rgba(0, 191, 255,1);
-    box-shadow: 0 3.5px 6px -1px rgba(0, 0, 255,0.8);
-  }
-  #btn:hover
-  {
-    background-color:rgba(0, 0, 139,1);
-  }
-  #fyp
-  {
-    font-size: 15px;
-    font-weight: bold;
-  }
-  #images
-  {
-    position: relative;
-    width: 25%;
-    height: 20%;
-    margin-top: 0;
-    margin-left: 0;
-    padding-top: 0;
-    padding-left: 0;
-  }
-
-</style>
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -81,7 +10,8 @@ session_start(); //启用会话变量
     <link href="https://cdn.bootcss.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="https://cdn.bootcss.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="theme.css" type="text/css"> </head>    
+    <link rel="stylesheet" href="theme.css" type="text/css">
+    <link rel="stylesheet" href="__CSS__/login.css" type="text/css">   
   </head>
   
 <html>
@@ -92,13 +22,15 @@ session_start(); //启用会话变量
     <div  id="forms" class="container">
       <div class="row">
         <div id="forms1" class="mx-auto col-md-6 col-10 p-5">
-            <img id="images" class="img-fluid d-block" src="__ROOT__/static/images/logo.png">
-          <h1 id="fonts" class="mb-4 text-light">Log in</h1>
           <form action="{:url('index/dologin')}" method="post">
-              <div class="form-group"> <input type="text" class="form-control" name="userid" placeholder="Enter email" id="form9"> </div>
-              <div class="form-group mb-3"> <input type="password" class="form-control" name="password" placeholder="Password" id="form10"> <small class="form-text text-muted text-right">
-                <a id="fyp" href="#"> Forget your password?</a>
-              </small> </div> <button id="btn" type="submit" class="btn btn-primary">Submit</button>
+              <fieldset class="mx-auto col-md-12 col-5 p-5">
+              <legend id="fonts" class="mb-4 text-light">(Log in)</legend>
+              <div class="form-group"> <input  type="text" class="form-control" name="userid" placeholder="Enter email" id="form9"> </div>
+              <div class="form-group mb-3"> <input type="password" class="form-control" name="password" placeholder="Password" id="form10"> 
+                <small class="form-text text-muted text-right"><a id="fyp" href="#"> Forget your password?</a></small> 
+              </div> 
+              <button id="btn" type="submit" class="btn btn-primary">Submit</button>
+            </fieldset>
           </form>
         </div>
       </div>
