--- a/application/afterSale/view/AfterSale/show.html
+++ b/application/afterSale/view/AfterSale/show.html
@@ -72,7 +72,7 @@
                             售后表单
                         </h4>
                     </div>
-                    <form class="bs-example bs-example-form" role="form" method="GET" action="../AfterSale/insert"></form>
+                    <form class="bs-example bs-example-form" role="form" method="GET" action="../AfterSale/insert">
                     <div class="modal-body">
 
 
