--- a/application/customOrder/view/update_order/form.html
+++ b/application/customOrder/view/update_order/form.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,31 +10,47 @@
   <script src="../../../public/static/layui/layui.js"></script>
 
   <script>
-    //Demo
+
     layui.use('form', function () {
       var form = layui.form;
-    });
-     
-  </script>
-  <script type="text/javascript">
-    $(function () {
-        $('#testbb').click(function () {
-            var result = confirm("确定要提交吗？");
-            if (result) {
-                $('#test').submit();
+      //监听提交
+      form.on('submit(formDemo)', function (data) {
+
+        layer.confirm('确定提交修改?', { icon: 3, title: '提示' }, function (index) {
+          $.ajax({
+            url: '../../customOrder/Update_order/update.html',
+            method: 'GET',
+            data: data.field,
+            dataType: 'JSON',
+            success: function (res) {
+              if (res == 1) {
+                layer.msg("修改成功！！");
+              }
+              else
+                layer.msg("未修改任何信息");
+              // parent.closeIframe(res.msg);
+            },
+            error: function (data) {
+              layer.msg("修改失败！服务器错误");
             }
+          })
         });
+        return false;
+      });
+    });
+    //表单验证
+    form.verify({
+      price: [
+        /^([1-9](\d+)?(\.\d{1,2})?$)|(^0$)|(^\d\.\d{1,2})+$/
+        , '请输入正确单价'
+      ]
     });
   </script>
 </head>
 
 <body>
-
-
-
-
-    <!-- action="../../customOrder/Update_order/update.html" -->
-  <form class="layui-form" id="test" action="../../customOrder/Update_order/update.html">
+  <!-- action="../../customOrder/Update_order/update.html" -->
+  <form class="layui-form" id="test">
 
     <div class="layui-form-item">
       <label class="layui-form-label">订单编号</label>
@@ -44,7 +59,7 @@
           class="layui-input">
       </div>
     </div>
-    <input type="hidden" name="order_num" value="{$info.order_num}" >
+    <input type="hidden" name="order_num" value="{$info.order_num}">
     <div class="layui-form-item">
       <label class="layui-form-label">顾客信息</label>
       <div class="layui-input-block">
@@ -53,7 +68,7 @@
         <P>是否会员：{$info.level}</P>
         <P>电话：{$info.phnone}</P>
         {volist name="link" id="link"}
-        <P>联系人{$i}：{$link.name}  电话：{$link.phone}</P>
+        <P>联系人{$i}：{$link.name} 电话：{$link.phone}</P>
         {/volist}
       </div>
 
@@ -71,27 +86,28 @@
         <label class="layui-form-label">数量</label>
         <div class="layui-inline">
           <div class="layui-input-inline">
-          <input type="number" name="amount" value="{$info.amount}" class="layui-input">
+            <input type="number" name="amount" value="{$info.amount}" class="layui-input">
           </div>
           <label class="layui-form-label">单价</label>
           <div class="layui-input-inline">
-              <input type="text" name="unPrice" value="{$info.unit_price}" class="layui-input">
-              </div>
-        </div> 
-  </div>
-  <div class="layui-form-item">
-    <label class="layui-form-label">选择渠道</label>
-    <div class="layui-input-block">
-      <select name="channel" lay-verify="required">
-        <option value="{$info.order_channel}">{$info.order_channel}</option>
-        <option value="官方商城">官方商城</option>
-        <option value="电商自营店">电商自营店</option>
-        <option value="加盟实体店">加盟实体店</option>
-        <option value="自营实体店">自营实体店</option>
+            <input type="number" step="0.01" min="0.01" name="unPrice" value="{$info.unit_price}" class="layui-input"
+              lay-verify="price">
+          </div>
+        </div>
+      </div>
+      <div class="layui-form-item">
+        <label class="layui-form-label">选择渠道</label>
+        <div class="layui-input-block">
+          <select name="channel" lay-verify="required">
+            <option value="{$info.order_channel}">{$info.order_channel}</option>
+            <option value="官方商城">官方商城</option>
+            <option value="电商自营店">电商自营店</option>
+            <option value="加盟实体店">加盟实体店</option>
+            <option value="自营实体店">自营实体店</option>
 
-      </select>
-    </div>
-  </div>
+          </select>
+        </div>
+      </div>
 
     </div>
     <div class="layui-form-item">
@@ -101,27 +117,27 @@
       </div>
     </div>
 
-    
-    
 
-        <div class="layui-form-item">
-          <label class="layui-form-label">销售人员</label>
-          <div class="layui-input-block">
-            <p>姓名：{$info.employee_name}</p>
-            <p>电话：{$info.phone}</p>
-            <p>部门：{$info.department_name}</p>
 
-          </div>
-        </div>
-        
 
-                        
-        <div class="layui-form-item">
-          <div class="layui-input-block">
-            <button class="layui-btn" id="testbb" lay-submit lay-filter="formDemo">立即提交</button>
-            <button type="reset" class="layui-btn layui-btn-primary">重置</button>
-          </div>
-        </div>
+    <div class="layui-form-item">
+      <label class="layui-form-label">销售人员</label>
+      <div class="layui-input-block">
+        <p>姓名：{$info.employee_name}</p>
+        <p>电话：{$info.phone}</p>
+        <p>部门：{$info.department_name}</p>
+
+      </div>
+    </div>
+
+
+
+    <div class="layui-form-item">
+      <div class="layui-input-block">
+        <button class="layui-btn" id="testbb" lay-submit lay-filter="formDemo">立即提交</button>
+        <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+      </div>
+    </div>
 
 
   </form>
