--- a/application/login/view/index/login.html
+++ b/application/login/view/index/login.html
@@ -23,6 +23,7 @@ session_start(); //启用会话变量
       <div class="row">
         <div id="forms1" class="mx-auto col-md-6 col-10 p-5">
           <form action="{:url('index/dologin')}" method="post">
+              <img id="images" src="__ROOT__/static/images/logo.png">
               <fieldset class="mx-auto col-md-12 col-5 p-5">
               <legend id="fonts" class="mb-4 text-light">(Log in)</legend>
               <div class="form-group"> <input  type="text" class="form-control" name="userid" placeholder="Enter email" id="form9"> </div>
