--- a/application/login/view/index/admin.html
+++ b/application/login/view/index/admin.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 
         <style> 
+            @font-face
+            {
+                font-family: myfont;
+                src:url('__ROOT__/static/font/DK Jambo.otf');
+            }
 
-                @font-face
-                {
-                    font-family: myfont;
-                    src:url('__ROOT__/static/font/Login.ttf');
-                }
+                /* 
                 body
                 {
                     background:url('__ROOT__/static/images/back1.png') no-repeat;
@@ -158,49 +159,42 @@
                 {
                     margin-right: -10%;
 
-                }
+                } */
                </style>
 <head> 
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Document</title>
+        <title>Admin</title>
         <link href="https://cdn.bootcss.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
         <script src="https://cdn.bootcss.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
-        <link rel="stylesheet" href="theme.css" type="text/css">   
+        <link rel="stylesheet" href="theme.css" type="text/css">
+        <link rel="stylesheet" href="__CSS__/admin.css" type="text/css">     
 </head>
 <html>
 
 <body>
-    <nav class="navbar navbar-expand-md  navbar-dark"  style="background:#004B97;">
+    <nav class="navbar navbar-expand-md  navbar-dark"  style="background:rgb(2, 33, 63);">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img class="img-fluid d-block float-left" src="__ROOT__/static/images/logo.png"> 
+                <img id="images" src="__ROOT__/static/images/logo.png"> 
+                <h1 id="h1s">Customer Relationship Management System</h1>
             </a>
             <?php
-            echo " <h1  style='font-family: myfont;font-size:18px;margin-right:-50%;'>你好 &nbsp ".cookie('user_name').'<br>登陆时间是 &nbsp'.cookie('rec_time')." </h1> ";  
+            echo " <h1 style='font-family:myfont;font-size:18px;margin-right:-50%;color:#d8c427;position: absolute;left:67%;top:45%;'>HELLO &nbsp ".cookie('user_name').'<br>THE LOGIN TIME IS &nbsp'.cookie('rec_time')." </h1> ";  
             ?>            
             <a id="loginout" class="btn navbar-btn ml-2 text-white btn-secondary" href="{:url('index/loginOut')}">
             <i class="fa d-inline fa-lg fa-sign-in"></i>
-            登出
-            </a>
-            
-            
+            LOGOUT
+            </a>           
         </div>
     </nav>
 
-    <div id="bodys" class="container">
-        <div class="row">
-            <div class="offset-md-1 col-md-10">
-                    <button class="bt" style="vertical-align:middle" onclick="window.location.href='../../academy/Academy/form.html'"><span>Check Academy</span></button>
-                    <button class="bt" style="vertical-align:middle" onclick="window.location.href='../../major/Major/form.html'"><span>Check Major</span></button><br>
-                    <button class="bt1" style="vertical-align:middle" onclick="window.location.href='../../course/Course/form.html'"><span>Check Course</span></button>
-                    <button class="bt1" style="vertical-align:middle" onclick="window.location.href='../../teacher/Teacher/form.html'"><span>Check Teacher</span></button>
-                    <button class="bt1" style="vertical-align:middle" onclick="window.location.href='../../student/Student/form.html'"><span>Check Student</span></button>
-            </div>
-        </div>
-    </div>
+    <div id="bodys">
+                    <iframe  id="ifream1" src="__ROOT__/static/htmls/links1.html" name="Navigation"></iframe>
+                    <iframe  id="ifream2" name="content"></iframe>
+   </div>
 
         <div class="py-5 text-white" style="background:#004B97;">
             <div class="container" style="background: #004B97;">
