--- a/public/static/css/login.css
+++ b/public/static/css/login.css
@@ -58,3 +58,11 @@ fieldset
 {
   border-radius: 30px;
 }
+#images
+{
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  left: 15%;
+  top:12%;
+}
