--- a/application/login/view/index/admin.html
+++ b/application/login/view/index/admin.html
@@ -6,161 +6,7 @@
                 font-family: myfont;
                 src:url('__ROOT__/static/font/DK Jambo.otf');
             }
-
-                /* 
-                body
-                {
-                    background:url('__ROOT__/static/images/back1.png') no-repeat;
-                    background-position-x: 45%;
-                    background-position-y: 47%;
-                    background-size: 100% 64%;
-                }
-                #bodys
-                {
-                    height:452px;
-                }
-               
-               #but
-               {
-                   width: 100%;
-                   text-align: center;
-                   
-               }
-               .bt 
-               {
-                    display: inline-block;
-                    border-radius: 6px;
-                    background-color:rgba(207, 193, 193,0);
-                    border: none;
-                    text-align: center;
-                    font-size: 28px;
-                    padding: 10px;
-                    width: 40%;
-                    height: 80%;
-                    transition: all 0.5s;
-                    cursor: pointer;
-                    margin: 2.5%;
-                    outline: none;
-              
-                }
-                .bt:hover
-                {
-                    background-color:rgba(81, 185, 233, 0.5);
-                    font-style: italic;
-                }
-                  
-                .bt span 
-                {
-                    cursor: pointer;
-                    display: inline-block;
-                    position: relative;
-                    transition: 0.5s;
-                    font-size: 30px;
-                    color:white;
-                    font-family: myfont;
-                }
-        
-                .bt span:after 
-                {
-                    content: '»';
-                    position: absolute;
-                    opacity: 0;
-                    top: 0;
-                    right: -20px;
-                    transition: 0.5s;
-                    color: black;
-
-                }
-        
-                .bt:hover span 
-                {
-                    padding-right: 25px;
-                    color: black;
-                }
-        
-                .bt:hover span:after 
-                {
-                    opacity: 1;
-                    right: 0;
-                }
-        
-                .bt:active:after 
-                {
-                    padding: 0;
-                    margin: 0;
-                    opacity: 1;
-                    transition: 0s
-                }
-                .bt1
-               {
-                    display: inline-block;
-                    border-radius: 6px;
-                    background-color:rgba(207, 193, 193,0);
-                    border: none;
-                    text-align: center;
-                    font-size: 28px;
-                    padding: 10px;
-                    width: 25%;
-                    height: 40%;
-                    transition: all 0.5s;
-                    cursor: pointer;
-                    margin: 2.5%;
-              
-                }
-                .bt1:hover
-                {
-                    background-color:rgba(81, 185, 233, 0.5);
-                    font-style: italic;
-                }
-                  
-                .bt1 span 
-                {
-                    cursor: pointer;
-                    display: inline-block;
-                    position: relative;
-                    transition: 0.5s;
-                    font-size: 30px;
-                    color:white;
-                    font-family: myfont;
-                }
-        
-                .bt1 span:after 
-                {
-                    content: '»';
-                    position: absolute;
-                    opacity: 0;
-                    top: 0;
-                    right: -20px;
-                    transition: 0.5s;
-                    color: black;
-
-                }
-        
-                .bt1:hover span 
-                {
-                    padding-right: 25px;
-                    color: black;
-                }
-        
-                .bt1:hover span:after 
-                {
-                    opacity: 1;
-                    right: 0;
-                }
-        
-                .bt1:active:after 
-                {
-                    padding: 0;
-                    margin: 0;
-                    opacity: 1;
-                    transition: 0s
-                }
-                #loginout
-                {
-                    margin-right: -10%;
-
-                } */
-               </style>
+        </style>
 <head> 
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -172,6 +18,7 @@
         <link rel="stylesheet" href="theme.css" type="text/css">
         <link rel="stylesheet" href="__CSS__/admin.css" type="text/css">     
 </head>
+
 <html>
 
 <body>
@@ -194,16 +41,15 @@
     <div id="bodys">
                     <iframe  id="ifream1" src="__ROOT__/static/htmls/links1.html" name="Navigation"></iframe>
                     <iframe  id="ifream2" name="content"></iframe>
-   </div>
+    </div>
 
-        <div class="py-5 text-white" style="background:#004B97;">
-            <div class="container" style="background: #004B97;">
+        <div class="py-5 text-white" style="background:rgb(2, 33, 63);">
                 <div class="row">
                   <div class="col-md-9" >
-                    <p>© Copyright 2018 University Management - All rights reserved.</p>
+                    <p>© Copyright 2018 Customer Relationship Management - All rights reserved.</p>
                   </div>
                   <div class="col-4 col-md-1 align-self-center">
-                    <a href="https://weibo.com/u/5726029829?nick=%E9%9D%92%E5%B2%9B%E5%A4%A7%E5%AD%A6" target="_blank">
+                    <a href="https://weibo.com/haierexpo" target="_blank">
                       <i class="fa fa-fw fa-3x text-white fa-weibo"></i>
                     </a>
                   </div>
@@ -218,7 +64,6 @@
                     </a>
                 </div>
             </div>
-        </div>
     </div> 
    
 </body>
