--- a/application/departments/view/departments/departments.html
+++ b/application/departments/view/departments/departments.html
@@ -40,6 +40,7 @@
                 {/volist} 
                 </tbody>
             </table>
+            {$list->render()}
             </div>
         </div>
     </div>  
