首页整合优化

--- a/application/login/view/index/admin.html
+++ b/application/login/view/index/admin.html
@@ -39,7 +39,7 @@
     </nav>
 
     <div id="bodys">
-                    <iframe  id="ifream1" src="__ROOT__/static/htmls/links1.html" name="Navigation"></iframe>
+                    <iframe  id="ifream1" src="__ROOT__/static/htmls/links.php" name="Navigation"></iframe>
                     <iframe  id="ifream2" name="content"></iframe>
     </div>
 
