--- a/application/feedback/view/Index/index.html
+++ b/application/feedback/view/Index/index.html
@@ -16,7 +16,7 @@
           maxmin: true,
           shadeClose: true, //点击遮罩关闭层
           area : ['800px' , '600px'],
-          content: '../../public/afterSale/UpdateAftersale/form?id='+id
+          content: '../../public/feedback/UpdateFeedback/form?id='+id
             });
         });
        });
@@ -28,31 +28,32 @@
 <table class="table table-striped table-hover">
     <thead>
         <tr>
-            
-            <th id="aftersale_id">售后编号</th>
-            <th id="order_num">订单编号</th>
+            <th>\</th>
+            <th id="feedback_roll">反馈编号</th>
+            <th id="aftersale_roll">售后编号</th>
             <th id="question_type">问题类型</th>
             <th id="employee_id">售后人员</th>
-            <th id="processing_date">受理日期</th>
-            <th id="state">受理状态</th>
-            <th id="question">问题详情</th>
+            <th id="feedback_date">受理日期</th>
+            <th id="others">处理情况说明</th>
+            <th id="confirment">客户确认</th>
             <th id="alter">修改</th>
         </tr>
     </thead>
 
-    {volist name="aftersaleInfo" id="Info" }
+    {volist name="feedbackInfo" id="Info" }
     <tr>
+        <td><?php echo ( $_GET['page']?($_GET['page']*10-10+$i):$i  ); ?></td>
+        <td>{$Info.feedback_roll}</td>
         <td>{$Info.aftersale_roll}</td>
-        <td>{$Info.order_num}</td>
         <td>{$Info.question_type}</td>
         <td>{$Info.employee_id}</td>
-        <td>{$Info.processing_date}</td>
-        <td>{$Info.state}</td>
-        <td>{$Info.question}</td>
-        <td><button class="submit" id={$Info.aftersale_roll}">修改</button></td>
+        <td>{$Info.feedback_date}</td>
+        <td>{$Info.others}</td>
+        <td>{$Info.confirment}</td>
+        <td><button class="submit" id={$Info.feedback_roll}">修改</button></td>
     </tr>
     {/volist}
 </table>
-{$aftersaleInfo->render()}
+{$feedbackInfo->render()}
 </body>
 </html>
