--- a/application/customOrder/view/index/index.html
+++ b/application/customOrder/view/index/index.html
@@ -43,7 +43,8 @@ margin:8px;
 </style>
     <!-- <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script> -->
     <script src="../../public/static/js/jquery-3.3.1.js"></script>
-    <script src="../../public/static/layer/layer.js"></script>
+    <script src="../../public/static/layui/layui.js"></script>
+    <link rel="stylesheet" href="../../public/static/layui/css/layui.css">
     <script>
         $(document).ready(function () {
             $('.submit').on('click', function () {
@@ -81,71 +82,106 @@ margin:8px;
             });
         });
     </script>
+    <script>
+        var table = layui.table;
+
+
+    </script>
+    <script type="text/html" id="barDemo">
+            <a class="layui-btn layui-btn-xs" lay-event="detail">查看</a>
+            <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
+            <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
+            
+        </script>
+    <script>
+        layui.use('table', function () {
+            var table = layui.table;
+
+            //第一个实例
+            table.render({
+                elem: '#test'
+                , title: "订单表"
+                , height: 700
+                , defaultToolbar: ['filter', 'print', 'exports']
+                , url: '../../public/customOrder/index/json' //数据接口
+                , page: true //开启分页
+                , toolbar: 'defult'
+                , cols: [[ //表头
+                    { field: 'order_num', title: '编号', type: 'numbers', width: 60, sort: true, fixed: 'left' }
+                    , { field: 'order_num', title: '订单编号', id: 'orderNum', width: 142, sort: true, fixed: 'left', sort: true }
+                    , { field: 'custom_num', title: '顾客编号', width: 120, sort: true }
+                    , { field: 'product_name', title: '产品名称', width: 142, sort: true }
+                    , { field: 'amount', title: '数量', width: 80, sort: true }
+                    , { field: 'unit_price', title: '单价', width: 80, sort: true }
+                    , { field: 'experience', title: '总额', width: 80, sort: true }
+                    , { field: 'saler_num', title: '销售员编号', width: 90, sort: true }
+                    , { field: 'order_time', title: '创建时间', width: 150, sort: true }
+                    , { field: 'order_channel', title: '渠道', width: 110, sort: true }
+                    , { fixed: 'right', width: 170, toolbar: '#barDemo' } //这里的toolbar值是模板元素的选择器
+
+                ]]
+
+
+
+            });
+            // //执行表格“尺寸结构”的重置，一般写在对应的事件中
+            // table.resize('test');
+
+
+            //监听工具条
+            table.on('tool(jsontable)', function (obj) { //注：tool是工具条事件名，test是table原始容器的属性 lay-filter="对应的值"
+                var data1 = obj.data; //获得当前行数据
+                var layEvent = obj.event; //获得 lay-event 对应的值（也可以是表头的 event 参数对应的值）
+                var tr = obj.tr; //获得当前行 tr 的DOM对象
+                var id = data1['order_num'];
+                if (layEvent === 'detail') { //查看
+                    //do somehing
+                    layer.msg("4564");
+                    // console.log(data1['order_num']); //获取选中行的数据
+
+                } else if (layEvent === 'del') { //删除
+                    layer.confirm('真的删除行么', function (index) {
+                        obj.del(); //删除对应行（tr）的DOM结构，并更新缓存
+                        layer.close(index);
+                        //向服务端发送删除指令
+                    });
+                } else if (layEvent === 'edit') { //编辑
+                    //do something
+                    layer.open({
+                    type: 2,
+                    title: '修改订单',
+                    maxmin: true,
+                    shadeClose: true, //点击遮罩关闭层
+                    area: ['800px', '650px'],
+                    //   content: ['../../public/customOrder/Update_order/form?id='+id,'no']
+                    content: '../../public/customOrder/Update_order/form?id=' + id
+                });
+
+                    //同步更新缓存对应的值
+                    obj.update({
+                        username: '123'
+                        , title: 'xxx'
+
+                    });
+                }
+            });
+        });
+    </script>
+
 </head>
 
 <body>
-    <h2>订单列表</h2>
 
-    <a href='../../public/customOrder/index/excelPrint'><button id="excel">导出Excel</button></a>
-    <a href='../../public/customOrder/index/getPdf'><button id="pdf">导出PDF</button></a>
-    <a href="../../顾客订单导入模板.xlsx"><button value="下载模板">下载导入模板</button></a>
 
-    <button id="customer">新建客户</button>
-    <div>
-        <!-- action="{:url('customOrder/import_from_excel/import')}" -->
-        <form id="excel" method="post" action="{:url('customOrder/import_from_excel/import')}" class="form-signin"
-            enctype="multipart/form-data">
-            <input id="file" name="excel" type="file" class="form-control">
-            <button class="btn btn-lg btn-primary btn-block" id="btton">导入订单</button>
-        </form>
-    </div>
-    <table class="table table-striped table-hover">
-        <thead>
-            <tr>
-                <th>\</th>
-                <th id="stu_rollno">订单编号</th>
-                <th id="customerId">顾客编号</th>
-                <th id="product_id">产品名称</th>
-                <th id="tea_name">数量</th>
-                <th id="mark">单价</th>
-                <th id="mark">总额</th>
-                <th id="mark">销售员编号</th>
-                <th id="major_name">创建时间</th>
-                <th id="course_name">渠道</th>
-                <th id="type">操作</th>
-                <!-- <th id="type">活动类型</th> -->
-            </tr>
-        </thead>
 
-        {volist name="cusTomOrder" id="order" }
-        <tr>
-            <td>
-                <?php echo ( $_GET['page']?($_GET['page']*10-10+$i):$i  ); ?>
-            </td>
-            <td>{$order.order_num}</td>
-            <td>{$order.custom_num}</td>
-            <td>{$order.product_name}</td>
+    <table id="test" lay-filter="jsontable" lay-size="lg"></table>
 
-            <td>{$order.amount}</td>
-            <td>{$order.unit_price}</td>
-            <td>
-                <?php echo $order['unit_price']*$order['amount']; ?>
-            </td>
-            <td>{$order.saler_num}</td>
 
-            <td>{$order.order_time}</td>
-            <td>{$order.order_channel}</td>
-            <!-- <td>{$order.activity}</td> -->
-            <td><button class="submit" id={$order.order_num}">修改</button></td>
-        </tr>
-        {/volist}
-    </table>
-    {$cusTomOrder->render()}
-    <div class="copyright">
-        <a title="官方网站" href="http://localhost/tp5/public/customOrder/index?page=1">XX家电</a>
-        <span>V5</span>
-        <span>{ 十年磨一剑-为API开发设计的高性能框架 }</span>
-    </div>
+
+
+
+
+
 </body>
 
 </html>
